--- a/index.html
+++ b/index.html
@@ -3,64 +3,154 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Gabor's Personal Site</title>
+  <title>Gabor Nemeth, CV</title>
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/pics.png" alt="an owl"></td>
+      <td><img src="Images/negyzet_gabor_100x100.jpg"></td>
       <td>
         <h1>Gabor Nemeth</h1>
-        <em>
-          <p>Mr. Doctor <strong>PHD</strong> Jean-Monet Chair</p>
-        </em>
       </td>
     </tr>
   </table>
-
-  <p>Here comes the blabla part</p>
   <hr size="3" noshade=true>
 
-  <h3>Work experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Dates</th>
-      <th>Work</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2010-2013</td>
-        <td>Lead Developer</td>
-      </tr>
-      <tr>
-        <td>2010</td>
-        <td>Resercher at University</td>
-      </tr>
-    </tbody>
+  <h3>
+    <p>Profile</p>
+  </h3>
+  <p>Dedicated professional with a combined experience of <strong>17+</strong> years in Retail, Manufacturing, Services Delivery, HR, Business Controls, Project and People Management, Transformation and Automation is now looking for the next career
+    challenge.</p>
+  <hr size="3" noshade=true>
+
+  <h3>
+    <p>Contact</p>
+  </h3>
+  <table cellspacing="5">
+    <tr>
+      <td>Tel:</td>
+      <td>+36-70-210-0024</td>
+    </tr>
+    <tr>
+      <td>Mail:</td>
+      <td>ganemeth79@gmail.com</td>
+    </tr>
+    <tr>
+      <td>In:</td>
+      <td>linkedin.com/in/ganemeth</td>
+    </tr>
   </table>
   <hr size="3" noshade=true>
-  <h3>Skills</h3>
-  <table cellspacing="10">
+
+  <h3>
+    <p>Personal skills</p>
+  </h3>
+  <img src="Images/skills.png" alt="">
+  <hr size="3" noshade=true>
+
+  <h3>
+    <p>Language</p>
+  </h3>
+  <table cellspacing="5">
     <tr>
-      <td>Ios Dev</td>
+      <td>Hungarian</td>
       <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Win Dev</td>
+      <td>English</td>
       <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
-      <td>Ubuntu Dev</td>
-      <td>⭐⭐⭐</td>
+      <td>German</td>
+      <td>⭐⭐</td>
     </tr>
   </table>
   <hr size="3" noshade=true>
 
-  <em><strong><a href="Links.html">My Lists</a></strong></em>
-<br>
-  <em><strong><a href="Contacts.html">My Contacts</a></strong></em>
-<br><br><br>
+  <h3>
+    <p>Interests</p>
+  </h3>
+  <img src="Images/hobby.png" alt="">
+  <hr size="3" noshade=true>
+
+  <!-- 2nd page -->
+
+  <h3>WORK EXPERIENCE</h3>
+  <p><strong>Innovation and Automation Manager, 07/2020 – 08/2021</strong> at Morgan Stanley, Budapest <br>
+    Leading a squad to run, maintain and develop capital calculation databases for daily operation and to provide
+    automation support to local Finance teams (Access, VBA, Alteryx).</p>
+  <p><strong>Transformation Manager in HR Automation, 07/2017-06/2020</strong> at IBM Hungary ISSC Ltd., Budapest <br>
+    Led and participated in projects to automate, standardize and simplify HR processes, reporting, operations
+    and the related control activities for Europe and MEA.</p>
+  <p><strong>Leader of HR Testing Centre of Excellence, Europe, 05/2013-06/2017</strong> at IBM Hungary Ltd., Budapest <br>
+    Led a team of business controls professionals to ensure timely and quality testing of key controls of HR processes
+    for the European region.</p>
+  <p><strong>Department Manager</strong>, 10/2010 – 05/2013 at IBM DSS Ltd., Székesfehérvár, Global Delivery Centre <br>
+    <strong>Project Manager</strong>, 09/2008 – 10/2010 at IBM DSS Ltd., Vác, Manufacturing Plant <br>
+    <strong>Team Leader</strong>, 02/2008 – 09/2008 at IBM DSS Ltd., Vác, Manufacturing Plant <br>
+    <strong>Capacity Planner</strong>, 04/2007 – 02/2008 at IBM DSS Ltd., Vác, Manufacturing Plant <br>
+    <br>
+    <strong>Merchandise Planner</strong>, 10/2010 – 05/2013 at Tesco Stores Ltd., Budaörs <br>
+    <strong>Import Stock Controller</strong>, 10/2010 – 05/2013 at Tesco Stores Ltd., Budaörs <br>
+  </p>
+  <hr size="3" noshade=true>
+
+  <h3>PROFESSIONAL SKILLS AND EDUCATION</h3>
+  <p><strong>Certificates and badges</strong>
+  <table>
+    <tr>
+      <td>Data Science Professional Certificate by Coursera</td>
+      <td>2020</td>
+    </tr>
+    <tr>
+      <td>IBM Certified Manager badge</td>
+      <td>2020</td>
+    </tr>
+    <tr>
+      <td>IBM Mentor badge</td>
+      <td>2019</td>
+    </tr>
+    <tr>
+      <td>People Analytics, Essentials and Advanced badges by Coursera and IBM</td>
+      <td>2019</td>
+    </tr>
+    <tr>
+      <td>IBM SPSS Modeler V18.0.x Essentials badge by IBM</td>
+      <td>2018</td>
+    </tr>
+    <tr>
+      <td>IBM Automation Practitioner badge</td>
+      <td>2018</td>
+    </tr>
+    <tr>
+      <td>Enterprise Design Thinking Practitioner badge by IBM</td>
+      <td>2017</td>
+    </tr>
+  </table>
+  <p><strong>Trainings</strong>
+  <table>
+    <tr>
+      <td>Operations:</td>
+      <td>Lean, Agile, Global Delivery Framework</td>
+    </tr>
+    <tr>
+      <td>People:</td>
+      <td>Coaching, Mentoring, Positive Leadership Edge</td>
+    </tr>
+    <tr>
+      <td>Controls:</td>
+      <td>Risk Management, Business Controls</td>
+    </tr>
+    <tr>
+      <td>Data:</td>
+      <td>Excel, VBA, SPSS Modeler, Data Analysis and Visualization and
+        Machine Learning with Python, SQL, BluePrism, Alteryx</td>
+    </tr>
+  </table>
+  </p>
+  <p><strong>Budapest Business School, 1998-2002</strong> <br> Faculty of Foreign Trade, Economist </p>
+
 </body>
 
 </html>
